public/assets/css/custom.css
/**
 *
 * You can write your CSS code here, DO NOT touch the default JavaScript file
 * because it will make it harder for you to update.
 *
 */

/*# sourceMappingURL=custom.css.map */

body {
    background-color: #EDCCDE;
    color: #333;
    font-family: 'Poppins', sans-serif;
}

.navbar {
    background-color: #68777A;
    color: white;
    top: 0;
}

.navbar-bg{
    background-color: #EDCCDE;
}

.main-sidebar {
    background: #FFECD4;
    padding-top: 20px;
}

/* Links */
.sidebar-menu li a {
    color: #594C53 !important;
    font-size: 16px;
}

.sidebar-menu li a:hover {
    background-color: #fff !important;
}

/* Active */
.sidebar-menu li.active a {
    background-color: #F2CEE2 !important;
    color: white;
}

/* Keep dropdown menu unaffected by active link colour */
.sidebar-menu > li.active .dropdown-menu a {
    background-color: transparent !important;
}

/* Left border of active link */
.dropdown.active > a {
    border-left: 5px solid #ff6ec7;
}

.dropdown-menu{
    background-color: #F2E0C9 !important;
}

/* Hover colour for dropdown menu links */
.sidebar-menu > li .dropdown-menu a:hover {
    background-color: #fff !important;
}

/* Remove default blue border */
.sidebar-menu .dropdown.active > a.nav-link::before {
    content: none !important;
}

/* Font size for dropdown menu links */
.sidebar-menu > li .dropdown-menu a {
    font-size: 14px;
    font-weight: normal;
    padding: 18px;
}

/* Table borders and text positioning */
.table th, .table td {
    border: 1px solid #f4d3f4;
    text-align: left !important;
    vertical-align: middle !important;
}

/* Table header colour */
.table th {
    background-color: #EDCCDE !important;
}

/* Table row colours */
.table-striped tbody tr:nth-of-type(odd) {
    background-color: #fff5fa;
}

.table-striped tbody tr:nth-of-type(even) {
    background-color: #ffffff;
}

.table tbody tr:hover {
    background-color: #ffe6f5;
    cursor: pointer;
}

/* Edit & submit button */
.btn-primary {
    background-color: #D18706;
    border-color: #D18706;
    color: black;
    font-size: 13px;
}

.btn-primary:hover {
    background-color: #FFA408 !important;
}

/* Delete button */
.btn-danger {
    background-color: #AD2B1F;
    border-color: #AD2B1F;
    color: white;
    font-size: 13px;
}

.btn-danger:hover {
    background-color: #E33829;
}

/* Close button */
.btn-success {
    background-color: #198754;
    border-color: #198754;
    color: white;
    font-size: 13px;
}

.btn-success:hover {
    background-color: #28D484 !important;
}

/* Form fields */
input, select, textarea {
    border: 1.5px solid #7C8E91 !important;
    font-size: 15px !important;
}

input:focus,
select:focus {
    background-color: #FFECD4 !important;
}

label {
    font-size: 14.3px !important;
    font-weight: bold;
}

/* Form title */
h4 {
    font-size: 18px !important;
}

/* Form error message */
.text-danger {
    margin-top: -20px;
    font-size: 14px;
}

/* 'Remember me' in login form */
.form-check{
    padding-top: 10px;
    padding-bottom: 10px;
}

/* Login form title */
h2 {
    font-size: 22px !important;
}

